src/objects/smagicinteract__smsMagic__c.object
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <description>SMSMagic object in Interact, This is basic Object which stores information about Outgoing SMS.</description>
    <fields>
        <fullName>smagicinteract__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__CreatedOn__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Delivery_Error_Message__c</fullName>
        <label>Delivery Error Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Is_Text_Unicode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Unicode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to track sms&apos;s sent to Leads.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Subject__c</fullName>
        <label>MMS Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Message_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                    <default>true</default>
                    <label>SMS</label>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Name__c</fullName>
        <description>Name of the sms receiver</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ObjectType__c</fullName>
        <description>Object type of receiver contact/lead/user</description>
        <label>ObjectType</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__PhoneNumber__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSText__c</fullName>
        <label>SMSText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Credits__c</fullName>
        <label>Message Credits</label>
        <precision>6</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Template</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SenderId__c</fullName>
        <label>SenderId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Source__c</fullName>
        <defaultValue>&quot;1150&quot;</defaultValue>
        <label>Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Type__c</fullName>
        <defaultValue>&quot;Outgoing&quot;</defaultValue>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for Tasks created for User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__deliveryStatus__c</fullName>
        <label>Delivery Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__disableSMSOnTrigger__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Disable SMS On Trigger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__external_field__c</fullName>
        <defaultValue>null</defaultValue>
        <externalId>true</externalId>
        <label>External Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__sentStatus__c</fullName>
        <label>Sent Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__statusMessage__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SMS History</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__PhoneNumber__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>smagicinteract__sentStatus__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__Name__c</columns>
        <columns>smagicinteract__ObjectType__c</columns>
        <columns>smagicinteract__CreatedOn__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>smagicinteract__statusMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Do_not_send_to_Opt_Opt_records</fullName>
        <active>true</active>
        <errorConditionFormula>smagicinteract__Contact__r.smagicinteract__SMSOptOut__c</errorConditionFormula>
        <errorMessage>Contact has opted out</errorMessage>
    </validationRules>
</CustomObject>